# ATGUI

./: .gitignore  BLUSH.MD  CONTRIBUTING.md  README.md  pyproject.toml
docs/: list.md  quick_start.md
scripts/: github_upload.py  pypi_upload.py
src/atgui/: __init__.py  core.py  menus.py  utils.py
tests/: custom.py  main.py  reader.py  t1.py
