[project]
name = "atgui"
version = "1.0.2"
authors = [
  { name="Raynixx", email="4raynixx@gmail.com" },
  { name="ChickenStrips05", email="chickenstrips05@proton.me" }
]
description = "ATGUI - Advanced Terminal GUI, Makes making Terminal GUI's easier and better!"
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
